force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__BaselineDate__c.field-meta.xml
<CustomField>
    <fullName>PDRI__BaselineDate__c</fullName>
    <label>Baseline Date</label>
    <type>DateTime</type>
</CustomField>