force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__LastRan__c.field-meta.xml
<CustomField>
    <fullName>PDRI__LastRan__c</fullName>
    <label>Last Ran</label>
    <type>DateTime</type>
</CustomField>