force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__PriceBookID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__PriceBookID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>TestCases</relationshipName>
    <type>Lookup</type>
</CustomField>