force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__ProductID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>TestCases</relationshipName>
    <type>Lookup</type>
</CustomField>