force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__TestTemplate__c.field-meta.xml
<CustomField>
    <fullName>PDRI__TestTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Template</label>
    <referenceTo>PDRI__TestTemplate__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>TestCases</relationshipName>
    <type>Lookup</type>
</CustomField>